# barbershop-enterprise-module

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml  script.txt
env/: local.toml
local_development/kafka/: publish-appointment-confirmed.sh  publish-appointment-solicited.sh  setup-kafka.sh
local_development/kafka/payloads/: appointment-solicited.txt
src/enterprise_module/: adapter.rs  domain.rs  lib.rs
src/enterprise_module/adapter/: error.rs  mod.rs
src/enterprise_module/adapter/config/: app_settings.rs  handler.rs  kafka_client.rs  mod.rs
src/enterprise_module/adapter/consumer/: appointment_confirmed.rs  appointment_solicited.rs  mod.rs
src/enterprise_module/adapter/model/: appointment_confirmed_message.rs  appointment_solicited_message.rs  mod.rs
src/enterprise_module/adapter/producer/: appointment_created_producer.rs  appointment_rejected_producer.rs  mod.rs
src/enterprise_module/adapter/repository/: appointment_repository.rs  barber_repository.rs  client_repository.rs  mod.rs  task_repository.rs
src/enterprise_module/application/: error.rs  mod.rs
src/enterprise_module/application/producer/: appointment_created_producer.rs  appointment_rejected_producer.rs
src/enterprise_module/application/repository/: appointment_repository.rs  barber_repository.rs  client_repository.rs  task_repository.rs
src/enterprise_module/application/request/: appointment_solicited_request.rs  mod.rs
src/enterprise_module/application/usecase/: appointment_solicited.rs
src/enterprise_module/domain/: entity.rs  error.rs  mod.rs  value_object.rs
(+17 files in other folders)
