[package]
name = "enterprise-module"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enterprise_module"
path = "src/bin/main.rs"
test = false
doc = false

[lib]
name = "enterprise_module_lib"
path = "src/enterprise_module/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {  version = "0.8", features = [ "v4", "serde" ] }
thiserror = "1.0"