[package]
name = "enterprise-module"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enterprise_module"
path = "src/bin/main.rs"
test = false
doc = false

[lib]
name = "enterprise_module_lib"
path = "src/enterprise_module/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {  version = "0.8", features = [ "v4", "serde" ] }
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
rdkafka = { version = "0.28", features = ["cmake-build"] }
envy = "0.4"
serde = "1.0"
serde_json = "1.0"
confy = "0.4"
futures = "0.3.13"
tokio = { version = "1.18.2", features = ["full"] }

[dev-dependencies]
mockall = "0.11.4"
